# LZ77GPU

./: .gitignore  .main.cu.swp  CMakeLists.txt  README.md  cubwt.slurm  main.cu  test.cu  test.txt
.github/workflows/: ci.yml
SA_Prefix_Doubling/: .GPU_SA_libcubwt58712671.log.swp  .gitignore  CMakeLists.txt  main.cu  main_copy.cu
SA_Prefix_Doubling/include/: kernel.cuh
include/: data_types.cuh  processor.cuh  timer.cuh
src/: kernel.cu  processor.cu  timer.cu
src/LZ77/include/: data_types.cuh  kernel.cuh  processor.cuh
src/LZ77/src/: LZ77_main.cu  kernel.cu  processor.cu
src/SuffixArray/include/: prefix_doubling.cuh
src/SuffixArray/src/: libcubwt.cu  prefix_doubling.cu  sa_profiling_main.cu
src/Tests/: lz77_tests.cpp  lz77_tests.cu
src/Util/include/: cuda_utils.cuh  memory_monitor.cuh  profiler.cuh  timer.cuh
src/Util/src/: timer.cu
